--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 						<section class="split contact">
 							<section class="alt">
 								<h3>Location</h3>
-								<p><br />Moncton, New Brunswick</p>
+								<p><br />Halifax, Nova Scotia</p>
 							</section>
 							<section>
 								<h3>Phone</h3>
