--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 									</a></h2>
 									<p>In this project we cleaned housing data in SQL Server.</p>
 								</header>
-								<a href="#" class="image main"><img src="images/data_cleaning.jpg" alt="" /></a>
+								<a href="https://github.com/PeterNdiforchu/PortfolioProjects/blob/main/Covid19PortfolioProject.sql" class="image main"><img src="images/data_cleaning.jpg" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="#" class="button large">View Project</a></li>
 								</ul>
